Add 'get infomation about myself' endpoint
